<resources>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="app_name">Wayv Drivers QA</string>
    <string name="phone_number">Phone Number</string>
    <string name="request_code">Request Code</string>
    <string name="logo">logo</string>
    <string name="enter_verification_code"><b>Enter the verification code sent via SMS to log in.</b></string>
    <string name="didnt_receive_a_code">Didn\'t receive a code?</string>
    <string name="resend"><b><u>Resend</u></b></string>
    <string name="back">back</string>
    <string name="dashboard">Dashboard</string>
    <string name="account">Account</string>
    <string name="name">Name</string>
    <string name="employee_photo">Employee Photo</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="driver_license">Driver License</string>
    <string name="logout">Logout</string>
    <string name="location">Location</string>
    <string name="your_roles">Your Roles</string>
    <string name="call">Call</string>
    <string name="select_your_role">Select your role</string>
    <string name="offline">Offline</string>
    <string name="icon">Icon</string>
</resources>
