<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="vm"
            type="com.ladevelopers.wayv.drivers.qa.features.login.LoginViewModel" />
    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.ladevelopers.wayv.drivers.qa.features.login.LoginActivity">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="200dp"
            android:layout_height="101dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:contentDescription="@string/logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/logo" />

        <ViewSwitcher
            android:id="@+id/viewSwitcher"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:showFirstView="@{!vm.showCodeEntering}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <android.support.v7.widget.CardView
                    android:id="@+id/cardView2"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    app:cardBackgroundColor="@android:color/white"
                    app:cardCornerRadius="2dp"
                    app:cardElevation="0dp"
                    app:contentPaddingBottom="4dp"
                    app:contentPaddingLeft="8dp"
                    app:contentPaddingRight="8dp"
                    app:contentPaddingTop="4dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.447"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageView">

                    <EditText
                        android:id="@+id/phoneText"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@null"
                        android:ems="10"
                        android:hint="@string/phone_number"
                        android:inputType="phone"
                        android:selectAllOnFocus="true"
                        android:singleLine="true"
                        android:text="@={vm.phone}"
                        android:textColor="@android:color/black"
                        android:textColorHint="@android:color/darker_gray"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.458" />
                </android.support.v7.widget.CardView>

                <Button
                    android:id="@+id/button"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:background="@android:color/white"
                    android:enabled="@{vm.canRequestCode}"
                    android:onClick="@{(view) -> vm.requestCode(view)}"
                    android:text="@string/request_code"
                    android:textColor="@android:color/black"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.452"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/cardView2" />
                <!--android:onClick="@{(view) -> vm.requestCode(view)}"-->

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="48dp"
                    android:layout_marginRight="48dp"
                    android:text="@string/enter_verification_code"
                    android:textAlignment="center" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/didnt_receive_a_code" />

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:layout_weight="1"
                        android:text="@string/resend" />

                </LinearLayout>

                <GridLayout
                    android:layout_width="wrap_content"
                    android:layout_height="24dp"
                    android:layout_marginTop="24dp">

                    <android.support.v7.widget.CardView
                        android:id="@+id/codePanel1"
                        android:layout_width="64dp"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="4dp"
                        android:layout_marginRight="4dp"
                        app:cardBackgroundColor="@android:color/white"
                        app:cardCornerRadius="2dp"
                        app:cardElevation="0dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical|center_horizontal"
                            android:text="@{vm.code1}"
                            android:textColor="@android:color/black"
                            android:textStyle="bold"
                            tools:text="1" />
                    </android.support.v7.widget.CardView>

                    <android.support.v7.widget.CardView
                        android:id="@+id/codePanel2"
                        android:layout_width="64dp"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="4dp"
                        android:layout_marginRight="4dp"
                        app:cardBackgroundColor="@android:color/white"
                        app:cardCornerRadius="2dp"
                        app:cardElevation="0dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical|center_horizontal"
                            android:text="@{vm.code2}"
                            android:textColor="@android:color/black"
                            android:textStyle="bold"
                            tools:text="2" />
                    </android.support.v7.widget.CardView>

                    <android.support.v7.widget.CardView
                        android:id="@+id/codePanel3"
                        android:layout_width="64dp"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="4dp"
                        android:layout_marginRight="4dp"
                        app:cardBackgroundColor="@android:color/white"
                        app:cardCornerRadius="2dp"
                        app:cardElevation="0dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical|center_horizontal"
                            android:text="@{vm.code3}"
                            android:textColor="@android:color/black"
                            android:textStyle="bold"
                            tools:text="3" />
                    </android.support.v7.widget.CardView>

                    <android.support.v7.widget.CardView
                        android:id="@+id/codePanel4"
                        android:layout_width="64dp"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="4dp"
                        android:layout_marginRight="4dp"
                        app:cardBackgroundColor="@android:color/white"
                        app:cardCornerRadius="2dp"
                        app:cardElevation="0dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical|center_horizontal"
                            android:text="@{vm.code4}"
                            android:textColor="@android:color/black"
                            android:textStyle="bold"
                            tools:text="4" />
                    </android.support.v7.widget.CardView>
                </GridLayout>

                <EditText
                    android:id="@+id/codeText"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:ems="10"
                    android:inputType="number"
                    android:maxLength="4"
                    android:text="@={vm.code}" />
            </LinearLayout>

        </ViewSwitcher>

        <FrameLayout
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:background="?android:attr/selectableItemBackground"
            android:onClick="@{() -> vm.back()}"
            android:visibility="@{vm.showCodeEntering ? View.VISIBLE : View.GONE}"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:contentDescription="@string/back"
                android:tint="@android:color/white"
                app:srcCompat="@drawable/arrow_left" />
        </FrameLayout>

    </android.support.constraint.ConstraintLayout>
</layout>


